[project]
name = "LLM Response Service"
version = "0.1.0"
description = "A FastAPI service that provides a unified API for serving LLM responses, with conversation persistence, streaming support, prompt template management, and usage tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
